...
            android:gravity="center"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="Mode Menu"
            android:paddingTop="11dp"
            android:paddingRight="17dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Add Event"
        android:src="@drawable/addevent_black"
        android:backgroundTint="#D3D3D3"
        android:tint="#FFFFFF"
...
